# galaxy_global

./: .gitignore  ANALISIS_PROBLEMA.md  INSTALLATION_GUIDE.md  LICENSE  PROYECTO_COMPLETADO.txt  README.md  RESUMEN_EJECUTIVO.md  setup.py  structure_tree.txt  verify_app.sh
galaxy_global/: modules.txt  patches.txt  pyproject.toml
galaxy_global/bio_industrial/doctype/bio_plant/: bio_plant.js  bio_plant.json  bio_plant.py
galaxy_global/bio_industrial/doctype/certification/: certification.js  certification.json  certification.py
galaxy_global/compliance_regulatory/doctype/regulatory_license/: regulatory_license.js  regulatory_license.json  regulatory_license.py
galaxy_global/compliance_regulatory/doctype/regulatory_obligation/: regulatory_obligation.js  regulatory_obligation.json  regulatory_obligation.py
galaxy_global/compliance_regulatory/doctype/risk_register/: risk_register.js  risk_register.json  risk_register.py
galaxy_global/corporate_holding/doctype/galaxy_legal_entity/: galaxy_legal_entity.js  galaxy_legal_entity.json  galaxy_legal_entity.py
galaxy_global/fintech_payments/doctype/pay_platform/: pay_platform.js  pay_platform.json  pay_platform.py
galaxy_global/fintech_payments/doctype/pay_user_summary/: pay_user_summary.json
galaxy_global/galaxy_global/: hooks.py
galaxy_global/insurance_guarantees/doctype/guarantee_facility/: guarantee_facility.py
galaxy_global/insurance_guarantees/doctype/insurance_policy/: insurance_policy.js  insurance_policy.json  insurance_policy.py
galaxy_global/real_estate/doctype/industrial_lease/: industrial_lease.js  (+2 more)
(+21 files in other folders)
